fix visibility of legal stuff

--- a/staticRaw/assets/css/b2c.scss
+++ b/staticRaw/assets/css/b2c.scss
@@ -267,6 +267,9 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
+	small {
+		color: $white;
+	}
 }
 .video-overlay {
 	display: none;
